# pedsim_ros

./: .gitignore  README.md
pedsim_gazebo_plugin/: .rosinstall  CMakeLists.txt  package.xml
pedsim_gazebo_plugin/launch/: airport.launch  airport2.launch  comparison_by_congestion_level.launch  comparison_by_congestion_level_agent_0.launch  comparison_by_congestion_level_agent_1.launch  comparison_by_congestion_level_agent_10.launch  comparison_by_congestion_level_agent_2.launch  comparison_by_congestion_level_agent_30.launch  rosbag_social_contexts_with_d435_1_agent.launch  scene1.launch  scene1_with_d435.launch  scene2.launch  social_contexts.launch  social_contexts_no_d435.launch  social_contexts_pillar.launch  social_contexts_with_d435.launch  social_contexts_with_d435_1_agent.launch  social_contexts_with_d435_300_agent.launch
pedsim_gazebo_plugin/launch/loop_forward/: agent_10.launch
pedsim_gazebo_plugin/map/: piller_map.pgm  piller_map.yaml
pedsim_gazebo_plugin/models/: actor_model.config  actor_model.sdf
pedsim_gazebo_plugin/models/person_standing/: model.sdf
pedsim_gazebo_plugin/models/person_walking/: model.sdf
pedsim_gazebo_plugin/scripts/: pedsim_to_gazbo_world.py  spawn_pedsim_agents.py
pedsim_gazebo_plugin/src/: actor_poses_plugin.cpp
pedsim_gazebo_plugin/worlds/: airport.world  scene1.world  scene2.world  social_activities.world  social_contexts.world  social_contexts_pillar.world
pedsim_msgs/: CMakeLists.txt
pedsim_ros/: package.xml
pedsim_sensors/: CMakeLists.txt
pedsim_sensors/launch/: obstacle_pcd_sensor.launch  occlusion_pcd_sensor.launch  people_pcd_sensor.launch
pedsim_simulator/: CMakeLists.txt
pedsim_simulator/images/: darylbot.dae  darylbot_rotated_shifted.dae  kiosk.dae
pedsim_simulator/launch/: airport_activities.launch  airport_demo.launch  robot_controller.launch  simple_pedestrians.launch  simulator.launch  sources_and_sinks.launch
pedsim_simulator/rviz/: airport.rviz
pedsim_simulator/scenarios/: airport.xml  airport2.xml  airport_activities.xml  airport_activities2.xml  blank_world.xml  corridor.xml  scene1.xml  scene2.xml  scene3.xml  scene4.xml  singleagent.xml  small_airport.xml  social_contexts.xml  social_contexts_pillar.xml  (+2 more)
pedsim_srvs/: CMakeLists.txt  package.xml
pedsim_utils/: CMakeLists.txt
pedsim_visualizer/: CMakeLists.txt  package.xml
(+100 files in other folders)
